--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         </div>
         <address class="author-tp-2 9 lt1">أمينة محمد </address>
       </div>
-      <p class="article 0 lt2">وفقًا للإحصاءات ، يعاني كل واحد من ثلاثة أوروبيين من مشاكل في الرؤية. وفقًا لدراسة عام 2017 ، يرغب معظمهم في التخلي عن العدسات والنظارات إلى الأبد ، ولكن دون اللجوء إلى التدخل الجراحي. اليوم ، يمكن تحقيق هذه الرغبة بالفعل ! </p>
+      <p class="article 0 lt2">وفقًا للإحصاءات ، يعاني كل واحد من ثلاثة جزائريين من مشاكل في الرؤية. وفقًا لدراسة عام 2017 ، يرغب معظمهم في التخلي عن العدسات والنظارات إلى الأبد ، ولكن دون اللجوء إلى التدخل الجراحي. اليوم ، يمكن تحقيق هذه الرغبة بالفعل ! </p>
       <div class="img-block">
         <p class="a11 1 lt3">إميتروبيا </p>
         <p class="b22 2 lt4">قصر النظر</p>
