--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <span class="sep">&gt;</span>
             <a href="#order_form"> من المفيد أن تعرف </a>
             <span class="sep">&gt;</span>
-            <a href="#order_form"> نعيد البصر: الأدوية والعلاجات التقليدية </a>
+            <a href="#order_form"> نعيد البصر:   المكملات الغذائية المفيدة للنظر </a>
             <h1>     لم تعد بحاجة الي تصحيح النظر بالليزر </h1>
             <a href="#order_form"><img class="img" src="./assets/img/img0.jpg"></a>
           </div>
@@ -74,12 +74,12 @@
       </div>
       <h3 class="4 lt6">جراحة العيون: ما هي العواقب:</h3>
       <p class="5 lt7">تصحيح الرؤية بالليزر يفقد شعبيته بسرعة. يشرح خبير طب العيون المستقل سيف العُبيدي هذا الموقف مع الحالات المتكررة من النتائج السلبية لعمليات تصحيح النظر بالليزر  .</p>
-      <p class="6 lt8">الجراحة عالية الجودة تكلف الكثير من المال - عشرة أو حتى خمسة عشر مرة أكثر من تكلفة المعيشة. بحثًا عن علاجات بديلة ، يبحث الناس عن خيارات رخيصة توفرها العيادات ذات المعدات القديمة. </p>
-      <p class="7 lt9">تُظهر إحصائيات منظمة الصحة العالمية أن حوالي 500000 ألف جزائري يعانون من مشاكل في الرؤية. وفقط 11٪ منهم يستطيعون تحمل تكلفة العلاج المكلف الذي يشير إليه التصحيح بالليزر.</p>
+      <p class="6 lt8">الجراحة عالية الجودة تكلف الكثير من المال - عشرة أو حتى خمسة عشر مرة أكثر من تكلفة المعيشة. بحثًا عن طريق بديلة ، يبحث الناس عن خيارات رخيصة توفرها العيادات ذات المعدات القديمة. </p>
+      <p class="7 lt9">تُظهر إحصائيات منظمة الصحة العالمية أن حوالي 500000 ألف جزائري يعانون من مشاكل في الرؤية. وفقط 11٪ منهم يستطيعون تحمل تكلفة العملية المكلفة لتصحيح النظر بالليزر.</p>
       <p class="8 lt10">المرضى الذين تدهور بصرهم بعد الجراحة اتصلوا بي. للأسف في مثل هذه الحالات لم يعد من الممكن استعادة الرؤية الطبيعية. لبقية حياتهم ، هؤلاء الناس سيضطرون إلى ارتداء نظارات ذات عدسات ضخمة</p>
       <p class="painting"><a href="#order_form"><img src="./assets/img/img2.jpg"></a><i class="9 lt11">عمليات استعادة الرؤية لا تنتهي دائمًا بشكل جيد.</i></p>
       <h3 class="0 lt12">طرق منزلية لإستعادة الرؤية :</h3>
-      <p class="1 lt13">هناك العديد من العلاجات المنزلية لإستعادة البصر ، ومنها تمارين العين ، وتناول الكثير من الفواكه والخضروات الغنية بفيتامينات أ ، ب 1 ، ب 2 ، ب 12 ، ج ، وغيرها.</p>
+      <p class="1 lt13">هناك العديد من الطرق المنزلية لإستعادة البصر ، ومنها تمارين العين ، وتناول الكثير من الفواكه والخضروات الغنية بفيتامينات أ ، ب 1 ، ب 2 ، ب 12 ، ج ، وغيرها.</p>
       <p class="2 lt14">على عكس الاعتقاد السائد ، من المستحيل استعادة حدة البصر بهذه الطريقة. والسبب هو أنه من أجل الحصول على النسبة المئوية المطلوبة من الفيتامينات من الطعام ، من الضروري تناول مثل هذه الكمية من المنتج الطازج في وجبة واحدة و هذا لا يمكن لأي شخص ببساطة أن يتناسب مع معدته </p>
       <p class="3 lt15">على سبيل المثال ، 10 كيلوغرامات من الجزر أو 15 كيلوغرامًا من التوت البري يوميًا. أيضًا ، لا يتم هضم جميع الفيتامينات ، فهناك عدد من الشروط لكل عنصر يجب مراعاتهم عند تناوله.</p>
       <p class="4 lt16">على سبيل المثال ، يكون الريبوفرين (فيتامين أ) منخفضًا لدى المدخنين والأشخاص الذين يشربون الكحول ، وكذلك أولئك الذين لديهم مستويات منخفضة من فيتامين هـ والزنك في الدم. ومع ذلك ، حتى عند الأشخاص الأصحاء ، لا يتم هضم فيتامين أ إلا عندما تستهلك كمية كافية من الدهون.</p>
@@ -89,7 +89,7 @@
       <p class="8 lt20">طور أطباء العيون الرائدون في  الجزائر مكملاً غذائياً سيحل قريبًا محل التصحيح بالليزر. في السوق الجزائري ، تم تسجيل هذا المكمل الغذائي تحت الاسم التجاري<a href="#order_form"> Oculus vision </a>. </p>
       <p class="9 lt21">خلال عام من وجوده ، سمحت لأكثر من 100000 شخص بإزالة النظارات وترك العدسات إلى الأبد. قضى العلماء أكثر من 7 سنوات في تطويره. استمرت التجارب السريرية لمدة 4 سنوات أخرى.</p>
       <p class="0 lt22">ترجع الفعالية التي لا مثيل لها للمنتج إلى التركيبة التي لا تحتوي على نظائرها، والتي تشمل مستخلص اللوتين, مونوهيدرات اللاكتوز, السيليكا الغروية, ستيرات المغنيسيوم. .</p>
-      <p class="1 lt23">لعبت طريقة الاستخلاص البارد  دورًا مهمًا في صنع الكبسولات ، مما أتاح الحفاظ على التركيب الكيميائي الحيوي الكامل للفيتامينات.</p>
+      <p class="1 lt23">لعبت طريقة الاستخلاص البارد  دورًا مهمًا في صنع هذه الأقراص ، مما أتاح الحفاظ على التركيب الكيميائي الحيوي الكامل للفيتامينات.</p>
       <p class="text-uppercase 2 lt24">يمكن للمكونات النشطة للمنتج رفع مستوى الفيتامينات اللازمة للرؤية إلى طبيعتها خلال 2-4 أسابيع. وخلال هذا الوقت ، يتم تطبيع توازن العناصر الدقيقة المسؤولة عن حدة البصر.</p>
       <p class="3 lt25">يؤدي هذا المكمل الغذائي إلى استقرار طبيعي لضغط العين ، وكذلك يقوي عضلات العين ويقوي الشبكية ويعيد النظر إلى طبيعته</p>
       <div class="form" id="form-bottom">
@@ -112,7 +112,7 @@
         </form>
       </div>
       <h3 class="4 lt29">أين يمكنني شراء <a href="#order_form"> Oculus vision </a>؟</h3>
-      <p class="5 lt30">للأسف ، لن يصل هذا الدواء إلى الصيدليات الجزائرية قريبًا. في هذه الأثناء ، يمكنك شراء <a href="#order_form"> Oculus vision </a> على موقع الويب <a href=" #order_form  ">  الرسمي </a>.</p>
+      <p class="5 lt30">للأسف ، لن يصل هذا المكمل الغذائي إلى الصيدليات الجزائرية قريبًا. في هذه الأثناء ، يمكنك شراء <a href="#order_form"> Oculus vision </a> على موقع الويب <a href=" #order_form  ">  الرسمي </a>.</p>
       <div class="comments">
         <h3><b class="7 lt31">تعليقات المستخدمين :</b></h3>
         <div class="comment mobile clearfix">
@@ -213,7 +213,7 @@
             <span class="9 lt46">إيماد. د.</span>
           </div></a>
           <div class="text">
-            <p class="0 lt47">لقد تمكنت من تحسين بصري باستخدام هذا المكمل الغذائي في 4 أسابيع. وأريد أن أجعل بصري مثاليًا. الحقيقة هي أنني أحيانًا أصبح كسولًا جدًا أو أنسى تناول كبسولات Oculus vision. لكنني سأحاول وسأكمل ما بدأته. </p>
+            <p class="0 lt47">لقد تمكنت من تحسين بصري باستخدام هذا المكمل الغذائي في 4 أسابيع. وأريد أن أجعل بصري مثاليًا. الحقيقة هي أنني أحيانًا أصبح كسولًا جدًا أو أنسى تناول أقراص Oculus vision. لكنني سأحاول وسأكمل ما بدأته. </p>
             <div class="date 1">
               <span class="comment_date">2021</span>
             </div>
@@ -226,7 +226,7 @@
             <span class="2 lt48">رشيدة الزدجالي</span>
           </div></a>
           <div class="text">
-            <p class="3 lt49">أنا مشتتة للغاية ، أنسى دائمًا تناول كبسولات Oculus vision. ولكن بالرغم من ذلك ، فقد تحسنت رؤيتي باستخدام <a href="#order_form"> Oculus vision </a>. لقد كان +1.5 ، الآن أصبح 0.8. </p>
+            <p class="3 lt49">أنا مشتتة للغاية ، أنسى دائمًا تناول أقراص Oculus vision. ولكن بالرغم من ذلك ، فقد تحسنت رؤيتي باستخدام <a href="#order_form"> Oculus vision </a>. لقد كان +1.5 ، الآن أصبح 0.8. </p>
             <div class="date 4">
               <span class="comment_date">2021</span>
             </div>
@@ -298,7 +298,7 @@
           </div>
         </div>
       </div>
-    </div><a class="button 0 lt60" href="#order_form">أطلب Oculus vision</a>
+    </div><a class="button 0 lt60" href="#order_form">اطلب Oculus vision</a>
   </div>
 </div></main>
 
