--- a/success.html
+++ b/success.html
@@ -2,7 +2,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=320">
     <meta name="MobileOptimized" content="width=320">
-    <title>Спасибо! Ваш заказ принят!</title>
+    <title>شكراً لك ! تم تأكيد طلبك !</title>
     <link href="" rel="stylesheet" type="text/css">
     <link href="" rel="stylesheet" type="text/css">
     <link media="all" rel="stylesheet" type="text/css" href="./assets/cdn/success/css/order-style.css">
@@ -18,20 +18,20 @@
 <div id="wrapper">
     <div class="order-block">
         <div class="text-holder">
-            <h2><span>Спасибо!</span> Ваш заказ принят!</h2>
-            <p>Наш оператор свяжется с вами для подтверждения заказа. <br><br> Доставка осуществляется курьером или почтой. Оплата - при получении!</p>
+            <h2><span style="direction: rtl;">شكراً لك !  </span> !    تم تأكيد طلبك </h2>
+            <p style="direction: rtl;">سيقوم أحد زملائنا بالإتصال بك لتأكيد طلبك  <br><br> يتم التوصيل إما عن طريق البريد او عامل التوصيل !</p>
         </div>
 
 
         <div class="text-box">
-            <h2>Участвуйте <span>в акции!</span></h2>
-            <p>Для того, чтобы принять участие в акции и следить за статусом вашего заказа, введите E-mail и нажмите "Сохранить"!</p>
+            <h2 style="direction: rtl;">شارك <span>في العرض الترويجي !</span></h2>
+            <p>من أجل المشاركة في العرض الترويجي و الحصول علي تخفيض و متابعة طلبك ,إدخل بريدك الإلكتروني هنا و إضغط علي زر (حفظ)</p>
             <form class="mail_form" action="#" id="email_form">
                 <fieldset>
                     <div class="text">
-                        <input type="email" id="email" placeholder="Введите ваш e-mail..." name="email">
+                        <input type="email" id="email" placeholder="أدخل بريدك الإلكتروني هنا..." name="email">
                     </div>
-                    <input data-error="Введите ваш e-mail" data-success="Спасибо за участие! Ваш E-mail сохранен!" class="btn" type="submit" value="Сохранить">
+                    <input data-error="Введите ваш e-mail" data-success="Спасибо за участие! Ваш E-mail сохранен!" class="btn" type="submit" value="حفظ">
                 </fieldset>
             </form>
         </div>
